tests/ui/parser/nested-missing-closing-angle-bracket.stderr
error: expected one of `,`, `>`, or `is`, found `;`
  --> $DIR/nested-missing-closing-angle-bracket.rs:2:46
   |
LL |   let v : Vec::<Vec<(u32,_,_)> = vec![vec![]];
   |       - while parsing the type for `v`       ^ expected one of `,`, `>`, or `is`

error: aborting due to previous error

