tests/ui/parser/nested-missing-closing-angle-bracket.rs
fn main() {
  let v : Vec::<Vec<(u32,_,_)> = vec![vec![]];
    //~^ ERROR: expected one of
}
